--- a/Application/Application/Views/HomeView.xaml
+++ b/Application/Application/Views/HomeView.xaml
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ltblApplication="clr-namespace:LTBLApplication;assembly=LTBLApplication"
+             xmlns:controls="clr-namespace:LTBLApplication.Controls;assembly=LTBLApplication"
              x:Class="LTBLApplication.Views.HomeView"
              Title="homeView"
-             BackgroundColor="White"
-             >
-	<ListView x:Name="MainView" />
+             BackgroundColor="White">
+  
+  <ltblApplication:ExtendedListView x:Name="MainView" ItemTemplateSelector="{StaticResource DeviceTemplateSelector}" />
+
 </ContentPage>
