--- a/Application/Application/Views/AddButtonView.xaml
+++ b/Application/Application/Views/AddButtonView.xaml
@@ -18,6 +18,7 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
     <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
     
     <Grid.ColumnDefinitions>
@@ -43,11 +44,8 @@
       <controls:FontLabel Grid.Row="5" Grid.Column="0" Text="Expect Ack?" YAlign="Center" />
       <Switch Grid.Row="5" Grid.Column="1" IsToggled="{Binding Ack}"  x:Name="AckSwitch" VerticalOptions="Center"/>
     
-      <Button Grid.Row="6" Grid.Column="0" Text="Cancel" BackgroundColor="Red"/>
-      <Button Grid.Row="6" Grid.Column="1" Text="Add" Command="{Binding AddDeviceCommand}" Clicked="Button_OnClicked" BackgroundColor="Green" TextColor="White"/>
-         
-        
-
+      <Button Grid.Row="7" Grid.Column="0" Text="Cancel" BackgroundColor="Red"/>
+      <Button Grid.Row="7" Grid.Column="1" Text="Add" Command="{Binding AddDeviceCommand}" Clicked="Button_OnClicked" BackgroundColor="Green" TextColor="White"/>
   </Grid>
 
 </ContentPage>
