--- a/Application/Application/Views/AddSliderView.xaml
+++ b/Application/Application/Views/AddSliderView.xaml
@@ -7,7 +7,7 @@
   
   <Grid Padding="10">
     <Grid.BindingContext>
-      <models:DeviceModel />
+      <models:SliderModel />
     </Grid.BindingContext>
 
     <Grid.RowDefinitions>
@@ -17,6 +17,7 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
 
     <Grid.ColumnDefinitions>
@@ -38,12 +39,12 @@
 
     <controls:FontLabel Grid.Row="4" Grid.Column="0" Text="Message Type" YAlign="Center" />
     <Picker Grid.Row="4" Grid.Column="1" SelectedIndex="{Binding Type}"  x:Name="TypePicker" VerticalOptions="Center"/>
-    
+
     <controls:FontLabel Grid.Row="5" Grid.Column="0" Text="Max Value" YAlign="Center" />
     <controls:FontEntry Grid.Row="5" Grid.Column="1" Text="{Binding MaxValue}" Keyboard="Numeric" VerticalOptions="Center" />
 
-    <Button Grid.Row="5" Grid.Column="0" Text="Cancel" BackgroundColor="Red"/>
-    <Button Grid.Row="5" Grid.Column="1" Text="Add" Command="{Binding AddDeviceCommand}" BackgroundColor="Green" TextColor="White"/>
+    <Button Grid.Row="6" Grid.Column="0" Text="Cancel" BackgroundColor="Red"/>
+    <Button Grid.Row="6" Grid.Column="1" Text="Add" Command="{Binding AddDeviceCommand}" Clicked="Button_OnClicked" BackgroundColor="Green" TextColor="White"/>
 
 
 
