--- a/LayoutCreator/MainWindow.xaml
+++ b/LayoutCreator/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow">
-    <Grid>
+    <!--<Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -36,6 +36,6 @@
             <ComboBoxItem>False</ComboBoxItem>
         </ComboBox>
         <Button Margin="20,50,20,0" Grid.Row="6" Grid.Column="1" Click="ButtonBase_OnClick">Add</Button>
-    </Grid>
+    </Grid>-->
     
 </Window>
